# OpenTranscribe

./: .env.example  CHANGELOG.md  README-OFFLINE.md  README.md  docker-compose.gpu-scale.yml  docker-compose.gpu.yml  docker-compose.nginx.yml  docker-compose.offline.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  opentr.sh  pyproject.toml
backend/: .dockerignore  README.md  requirements.txt
backend/alembic/versions/: v030_add_ldap_auth.py
backend/app/api/endpoints/: auth.py  speakers.py  system.py  users.py
backend/app/api/endpoints/files/: crud.py  url_processing.py
backend/app/auth/: direct_auth.py  ldap_auth.py
backend/app/core/: config.py
backend/app/db/: migrations.py
backend/app/models/: user.py
backend/app/schemas/: user.py
backend/app/services/: README.md  llm_service.py  media_download_service.py  protected_media_providers.py  speaker_embedding_service.py  task_detection_service.py  youtube_service.py
backend/app/services/protected_media_plugins/: __init__.py  mediacms.py
backend/app/tasks/: summarization.py  youtube_processing.py
backend/app/tasks/transcription/: core.py  storage.py  whisperx_service.py
backend/app/utils/: hardware_detection.py
database/: init_db.sql
docs/: LDAP_AUTH.md  ProjectPlan.md
docs-site/blog/: 2025-01-13-v0.3.3-release.md
docs-site/docs/: faq.md
docs-site/docs/configuration/: environment-variables.md
docs-site/docs/installation/: docker-compose.md
docs-site/docs/user-guide/: ai-summarization.md
frontend/: README.md  package-lock.json  package.json
frontend/scripts/: download-fonts.js
frontend/src/components/: FileUploader.svelte  Navbar.svelte  SettingsModal.svelte  SpeakerSelector.svelte  TranscriptDisplay.svelte  UserFileStatus.svelte  UserManagementTable.svelte
frontend/src/lib/: axios.ts
frontend/src/lib/i18n/: index.ts  languages.ts
frontend/src/lib/i18n/locales/: de.json  en.json  es.json  fr.json  ja.json  pt.json  ru.json  zh.json
frontend/src/lib/services/: configService.ts
frontend/src/lib/utils/: url.ts
frontend/src/routes/: +layout.svelte
frontend/src/routes/files/[id]/: +page.svelte
frontend/src/stores/: websocket.ts
nginx/: site.conf.template
scripts/: common.sh
security-reports/: backend-dockle.json  backend-grype.json  backend-grype.txt  backend-sbom.json  backend-sbom.txt  backend-trivy.json  backend-trivy.txt  frontend-grype.json  frontend-grype.txt  frontend-sbom.json  frontend-sbom.txt  frontend-trivy.json
